Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -89,14 +89,14 @@
 \titlehead{Master of Science in Engineering with Specialisation in Data Science}
 
 \subject{Master Thesis}
-\title[Self-Organization in a Biologically Inspired Novel Learning Framework Based on Probabilistic Neurons]{Self-Organization in a Biologically Inspired Novel Learning Framework Based on Probabilistic Neurons}
-\subtitle{Incorporating Findings from Neuroscience about Natural Intelligence into Modern Deep Learning Architectures}
+\title[Self-Organisation in a Biologically Inspired Novel Learning Framework Based on Probabilistic Neurons]{Self-Organisation in a Biologically Inspired Novel Learning Framework Based on Probabilistic Neurons}
+\subtitle{Incorporating Findings from Neuroscience about Natural Intelligence into a Computational Framework}
 
 \author[Pascal Sager]{{\small written by}\\Pascal Sager\\[1ex]  {\small supervised by}\\{\large Prof. Dr. Thilo Stadelmann}\\{\large Dr. Jan Milan Deriu}\\{\large Prof. Dr. Christoph von der Malsburg}\\[4ex]}
 
 \date{\today}
 
-\publishers{Zurich University of Applied Sciences\\Centre for Artificial intelligence}
+\publishers{Zurich University of Applied Sciences\\Centre for Artificial Intelligence}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \frontmatter
