--- a/tex/abstract_de.tex
+++ b/tex/abstract_de.tex
@@ -1,6 +1,6 @@
-Deep Learning hat sich im letzten Jahrzehnt im Bereich der automatischen Bildanalyse als herausragende Technologie etabliert.
+Deep Learning hat sich im letzten Jahrzehnt im Bereich der automatischen Bildanalyse als Standard-Technologie etabliert.
 Trotz beeindruckender Ergebnisse weist diese Technologie diverse Schwächen auf, wie begrenzte Robustheit gegenüber Störsignalen, eingeschränkte Transformationsinvarianz bei der Objekterkennung sowie den Bedarf an umfangreichen Trainingsdaten.
-Viele Forschungsansätze zielen darauf ab, diese Schwächen zu reduzieren, behandeln dabei aber hauptsächlich die Symptome indem beispielsweise Daten augmentiert werden, gehen aber nicht die zugrundeliegende Ursache an, welche auf das Lernprinzip tiefer neuronaler Netzwerke zurückzuführen ist.
+Viele Forschungsansätze zielen darauf ab, diese Schwächen zu reduzieren, behandeln dabei aber hauptsächlich die Symptome indem beispielsweise Daten augmentiert werden, anstatt auf die zugrundeliegende Ursache einzugehen, welche auf das Lernprinzip neuronaler Netzwerke zurückzuführen ist.
 
 Im Gegensatz dazu sind diese Schwächen im menschlichen Gehirn kaum vorhanden.
 Dies resultiert teilweise aus der nicht-sequenziellen Verarbeitung extrahierter Bildmerkmale und der Fähigkeit, eine visuelle Szene als mehr als die Summe ihrer Teile zu interpretieren, wie es die Gestalt-Psychologie beschreibt.
@@ -15,5 +15,5 @@ Sämtliche Lernprozesse sind dabei auf Selbstorganisation und lokale Interaktion
 Während frühere Forschung bereits die Effizienz von Projektionsphasen gezeigt hat, ist die Implementierung von Netzfragmenten in \emph{S1} mehrheitlich unerforscht.
 Folglich wird in dieser Arbeit die Implementierung dieser Komponente im Detail untersucht und anhand von Experimenten auf einem einfachen Datensatz mit geraden Linien diskutiert.
 
-Die Ergebnisse der Experimente zeigen, dass laterale Verbindungen trainiert mit Hebbian Learning tatsächlich zum Zellsupport genutzt werden kann.
-Mithilfe des Zellsupports weist das Netzwerk eine deutlich höhere Robustheit gegenüber Rauschsignalen auf und kann bis zu $91.7\%$ der unerwünscht durch Störsignale aktivierten Zellen deaktivieren. Zudem können unterbrochene Linien aufgrund der lateralen Unterstützung wiederhergestellt werden. Mit einer Reichweite der lateralen Verbindungen von $11$ Pixeln können Unterbrechungen von bis zu $8$ Pixeln rekonstruiert werden, mit zusätzlichem Feedback von \emph{S2} sogar Unterbrüche bis zu $20$ Pixel. Eine Ausarbeitung des vorgeschlagenen Frameworks könnte einige der Schwächen von neuronalen Netzwerken reduzieren und wird als vielversprechende Alternative zu aktuellen Bildverarbeitungsalgorithmen angesehen.
+Die Ergebnisse der Experimente zeigen, dass laterale Verbindungen, trainiert mit Hebbian Learning, tatsächlich zum Zellsupport genutzt werden kann.
+Mithilfe des Zellsupports weist das Netzwerk eine deutlich höhere Robustheit gegenüber Rauschsignalen auf und kann bis zu $91.7\%$ der unerwünscht durch Störsignale aktivierten Zellen deaktivieren. Zudem können unterbrochene Linien aufgrund der lateralen Unterstützung wiederhergestellt werden. Mit einer Reichweite der lateralen Verbindungen von $11$ Pixeln können Unterbrechungen von bis zu $8$ Pixeln rekonstruiert werden, mit zusätzlichem Feedback von \emph{S2} sogar Unterbrüche bis zu $20$ Pixel. Eine Ausarbeitung des vorgeschlagenen Frameworks könnte einige der Schwächen von neuronalen Netzwerken reduzieren und wird als vielversprechende alternative Forschungsrichtung angesehen.
