--- a/tex/preface.tex
+++ b/tex/preface.tex
@@ -1,44 +1,43 @@
 \small
-I want to start this preface by providing readers an overview of the origins of this master's thesis.
-This thesis should be understood as a first step towards a larger undertaking, namely as preparation for a dissertation.
-Therefore, this thesis should not be considered self-contained work, but rather as a (hopefully exciting) conceptual foundation,  that will be expanded and re-fined in the upcoming years.
-Many aspects of the proposed framework are still unclear or not yet proven by experiments.
-I kindly ask you, as reader, for your understanding and hope that you can recognise the value of the proposed concepts and that they will excite you as well.
+I begin this preface by providing readers with insights about the background of this Master's thesis.
+It is important to understand this thesis as a first step towards a broader endeavour - as preparatory work for a potential dissertation.
+Hence, this thesis should not be seen as self-contained work but rather as a (hopefully exciting) conceptual foundation that will be further developed and refined in the upcoming years.
 
-As soon as I have handed in this thesis and it has been assessed with a sufficient grade, I may use the title ``Master of Science''.
+Many aspects of the proposed framework still require clarification or validation through experimental evidence. I kindly ask you, the reader of this thesis, to understand if certain concepts have not yet been fully explored. I hope you can see the value of these ideas and that they will arouse your curiosity.
+
+Upon successful assessment of this thesis and achieving a satisfactory grade, I am entitled to use the title ``Master of Science''.
 Thus, I should ``master'' science or at least be able to work scientifically.
 Science can be defined as the systematic analysis of the real or virtual world through observations and experiments and the further development of existing technology.
 While this definition sounds straightforward, working successfully in science requires a lot of experience and commitment.
-I have been lucky enough to learn more about science and apply my knowledge in research projects at the Centre for Artificial Intelligence (CAI) of the Zurich University of Applied Sciences (ZHAW) since the beginning of my master's studies.
-Thus, I have learned to work scientifically on a daily basis, which has been highly beneficial for writing this thesis and will continue to help in my future endeavors.
-However, I still struggled writing this thesis:
-As someone with a background in industry and engineering background, I tend to approach tasks with a ``do-it'' mentality and intuitively refine my ideas with hands-on experimentation. 
-In this Master's thesis, it took me some time to make the transition from this do-it mindset to that of a researcher who is also strong in theoretical foundations. I believe that, thanks to this Master's thesis, I have now a good balance between implementation and studying theory.
+Throughout my Master's studies, I have had the privilege of delving deeper into science and applying the obtained knowledge in research projects at the Centre for Artificial Intelligence (CAI) of the Zurich University of Applied Sciences (ZHAW).
+This daily engagement with scientific work has proven extremely valuable in writing this thesis and will undoubtedly help me in the future.
 
-Overall, it has taken me an entire year to finish this thesis, which is the longest period of time allowed by my university.
-Formulating and refining this theory has been marked by failures and unsuccessful experiments.
-After approximately seven months of work, I had implemented two working and biologically inspired models, that performed quite well.
-In fact, I had even written a whole thesis on about these models, which, with some improvements, could have been submitted.
-But since these concepts didn't convince me enough that they should serve as foundation for a dissertation, I discarded everything and started all over again, just five months before the latest possible deadline.
-Consequently, this thesis contains only a fraction of the conducted experiments, but builds on the experience gained from earlier failed attempts.
+However, I still faced challenges in writing this thesis:
+As someone with an industry and engineering background, I tend to approach tasks with a ``do-it'' mentality and intuitively refine my ideas with hands-on experimentation. 
+In this Master's thesis, it took me some time to make the transition from this do-it mindset to that of a researcher who is also strong in theoretical foundations. Thanks to this Master's thesis, I believe I now balance implementation and studying theory much better.
+
+Completing this thesis spanned an entire year, the maximum duration allowed by my university.
+The process of formulating and refining the theory was punctuated by setbacks and experiments that did not produce the desired results.
+After approximately seven months of work, I had developed two biologically inspired models that showed promising performance. 
+In fact, I had even written an entire thesis about these models, which, with some improvements, could have been submitted.
+However, as these concepts did not entirely convince me as a foundation for a dissertation, I decided to discard my work and pursue a new approach only five months before the submission deadline.
+Consequently, this thesis contains only a fraction of the conducted experiments but builds on the experience gained from earlier failed attempts.
 Nevertheless, I am convinced that this decision was the right one and that the quality and consistency of a thesis should outweigh the quantity.
-I hope that you, dear reader, agree with this perspective and can understand that not all experiments could be completed due to these circumstances.
+I hope you, dear reader, agree with this perspective and understand the constraints that led to incomplete experimentation.
 
-During my studies and work at the CAI, I am privileged to be supported and mentored by Prof. Dr. Thilo Stadelmann, Head of the CAI.
-He uses to say (also in accordance with his \href{https://stdm.github.io/Great-methodology-delivers-great-theses/}{blog-post}) ``Great methodology delivers great theses''.
-It is always desirable to have an excellent outcome in a thesis.
-However, it is equally or even more important to reason why and how something works, to justify choices, and to show limitations.
+Throughout my Master's studies and my work at the CAI, I  have had the privilege to be supported and mentored by Prof. Dr. Thilo Stadelmann, Head of the CAI.
+He emphasises the idea that (also in accordance with his \href{https://stdm.github.io/Great-methodology-delivers-great-theses/}{blog-post}) ``Great methodology delivers great theses''.
+While it is undoubtedly desirable to achieve an exceptional result in a thesis, it is equally, if not more, important to articulate the rationale behind the methodology, justify choices and demonstrate the limitations. 
 Moreover, scientific breakthroughs always require courage to try something completely new, even if this means that the work may not lead to outstanding results worth publishing.
-I write my thesis with these thoughts and hope readers can follow my reasoning (in contrast to neuronal networks, which are the subject of this thesis, but whose reasoning often cannot be followed).
+These principles have guided me in writing this thesis, and I hope that readers will be able to understand my thought process.
 
-This thesis spans two fields; computer science and neuroscience.
-I try to link these fields as clearly as possible and to write in a way so that readers from both disciplines can follow my argumentation.
+This thesis spans the fields of computer science and neuroscience and attempts to make clear connections between these areas so that readers from both disciplines can understand my arguments. 
 However, this also means that some aspects are described rather extensively.
 So if you as a reader consider yourself an expert in one of these fields, feel free to skip (parts of) the fundamentals in \chref{fundamentals}.
 In general, this chapter also describes principles that are not necessary for understanding this thesis but are helpful for people with a deep learning background to gain an overview of the field of neurocomputing and vice versa.
 
 At this point, I also want to thank colleagues and friends for supporting this thesis.
-First, I think of my mentor Prof. Dr. Thilo Stadelmann, who got me excited about AI years ago and later introduced me to research.
+Foremost, I think of my mentor Prof. Dr. Thilo Stadelmann, who got me excited about AI years ago and later introduced me to research.
 He always encourages creative ideas, thinking outside the box, and striving for greatness.
 Thank you for your support, help, and guidance; I have grown personally and professionally.
 Further thanks go to Dr. Jan Deriu. 
@@ -48,7 +47,7 @@ To Prof. Dr. Christoph von der Malsburg for his seemingly endless patience in in
 You have inspired me regularly with ideas and opened up a new way of thinking about deep learning (this was also the inspiration for Geoffrey Hinton's quote on the second page, although I wouldn't presume to say that this thesis will change the future).
 Even though we couldn't implement all of your ideas in this thesis, I learned a lot in our discussions and hope that I will be able to tackle more of your thoughts in the future.
 
-The biggest thanks, however, goes to my family, who made this journey possible for me:
+The most profound thanks, however, goes to my family, who made this journey possible for me:
 To my parents, who supported and encouraged me in every way.
 To my younger brother, who inspired me to study.
 To my wife and son, who have been understanding and supportive and have always been the perfect counterbalance to the daily routine.
