--- a/tex/future_work.tex
+++ b/tex/future_work.tex
@@ -40,7 +40,7 @@ This work is a preliminary study for a possible dissertation, focusing on refini
 Consequently, numerous avenues exist for future work to improve the proposed framework. The following section outlines some of the most pressing issues and proposes the next steps.
 
 
-\subsection{Alternative Cells in \emph{S1}}
+\subsection{Alternative Cells in \emph{S1}}\seclbl{future_alt_cells}
 In the context of \emph{S1}, individual cells represent distinct features that are localised in a specific spatial location. These cells support each other's neuronal activity. As outlined in \secref{framework_neuroscience}, these cells can contribute to mutually exclusive net fragments. For example, cell $A$ may participate in a fragment with cell $B$ and another fragment with cell $C$, while cell $B$ and $C$ avoid simultaneous activation. This exceeds the functional capacity of cell $A$, and a copy of $A$ is needed to establish separate lateral connections with cell $B$ and $C$.
 
 The \secref{framework_alt_cells} described that alternative cells could be implemented by duplicating the output channels of the weight matrix $\boldsymbol{W}$ of \emph{S1}.
