--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -1,19 +1,58 @@
 %% intro.tex
 Deep learning systems have been employed for decades \cite{ivakhnenko_cybernetic_1965} and pervasive influence our daily lives. This technology is utilized in diverse applications, such as machine translation \cite{dabre_survey_2021}, image analysis \cite{bhatt_cnn_2021}, natural language processing \cite{otter_survey_2021}, and speech synthesis \cite{ning_review_2019}, among others. Deep learning methodologies' remarkable success and widespread adoption have revolutionized various industries \cite{bertolini_machine_2021}, enabling enhanced performance and efficiency in numerous tasks and services.
 However, recently ChatGPT \cite{liu_summary_2023} was introduced, marking a pivotal moment in the widespread application of AI systems.
-Since then, AI systems have transcended conventional boundaries and gained widespread applicability. The emergence of the GPT-4 model \cite{openai_gpt-4_2023} has sparked discussions regarding the potential manifestation of general intelligence \cite{bubeck_sparks_2023}. While some researchers argue in favour of this perspective, I hold a different viewpoint and argue that despite their apparent intelligent behaviour, present AI systems, including ChatGPT, lack the essential characteristics necessary to qualify as true intelligence;
-These systems are trained to optimize a specific target function, such as predicting the subsequent word token \sidecite{radford_improving_2018}. Thus, these systems rely on statistical patterns rather than genuine understanding. They still lack cognitive capabilities, reasoning ability, self-awareness, and intentionality \sidecite{rosenbloom_defining_2023, mitchell_debate_2023}. It might be that current learning frameworks cannot overcome these limitations, and alternative approaches are necessary (c.f. \secref{limitationsDL}).
+Since then, AI systems have transcended conventional boundaries and gained widespread applicability. %The emergence of the GPT-4 model \cite{openai_gpt-4_2023} has sparked discussions regarding the potential manifestation of general intelligence \cite{bubeck_sparks_2023}. While some researchers argue in favour of this perspective, I hold a different viewpoint and argue that despite their apparent intelligent behaviour, present AI systems, including ChatGPT, lack the essential characteristics necessary to qualify as true intelligence;
+%These systems are trained to optimize a specific target function, such as predicting the subsequent word token \sidecite{radford_improving_2018}. Thus, these systems rely on statistical patterns rather than genuine understanding. They still lack cognitive capabilities, reasoning ability, self-awareness, and intentionality \sidecite{rosenbloom_defining_2023, mitchell_debate_2023}. Those current learning frameworks might not overcome these limitations, and alternative approaches are necessary (c.f. \secref{limitationsDL}).
+These systems are trained to optimise a specific target function, such as predicting the subsequent word token \sidecite{radford_improving_2018}.
+Thus, such systems rely on statistical patterns rather than genuine understanding and still lack cognitive capabilities, reasoning ability, self-awareness, and intentionality \sidecite{rosenbloom_defining_2023, mitchell_debate_2023}.
+Furthermore, deep networks suffer from various issues of statistical learning such as missing robustness \sidecite{akhtar_threat_2018, long_survey_2022}, catastrophic forgetting \sidecite{kirkpatrick_overcoming_2017}, or requiring huge amounts of data \sidecite{smith_using_2022} (c.f. \secref{limitationsDL}).
 
 Geoffrey Hinton, recipient of the Turing Award\sidenote{The Turing Award is recognised as the highest academic award in computer science and sometimes also called the ``Nobel Prize of Computing''.} and a prominent figure in the field, is considered one of the pioneers of deep learning.
-His remarkable contributions, including developing backpropagation for learning (c.f. \secref{ann}), have laid the foundation for today's deep learning systems.
+His remarkable contributions, including developing deep learning's error correction algorithm called ``backpropagation of error'' (c.f. \secref{ann}), have laid the foundation for today's deep learning systems.
 After more than three decades, Hinton expresses deep scepticism about end-to-end backpropagation of errors and even suggests to ``throw it all away and start again'' to improve current systems fundamentally \cite{axios_hinton}.
 While this view may seem extreme, it shows that the learning algorithm of such systems has significant shortcomings.
 Some of the most critical limitations of deep learning systems are discussed in \secref{limitationsDL}.
 To overcome these challenges, researchers have proposed diverse methods and approaches \cite{long_survey_2022, sager_unsupervised_2022, yarats_improving_2021}. Despite these efforts, progress has been moderate, primarily focusing on mitigating the symptoms rather than addressing the core issues.
 
-This thesis introduces a novel learning framework inspired by neuroscience to address the core issues inherent in deep learning systems. Inspired by the human brain's remarkable learning capabilities, which surpass deep learning's limitations, this research aims to integrate neuroscientific insights into a learning framework. It seeks to overcome existing limitations and bridge the gap between artificial and biological intelligence. The thesis draws significant inspiration from the ``Theory of Natural Intelligence" proposed by \sideciteay{von_der_malsburg_theory_2022} \citeay{von_der_malsburg_theory_2022} \citeauthor*{von_der_malsburg_theory_2022} \citeauthor{von_der_malsburg_theory_2022} and provides a concrete manifestation of the theory within the framework. By anchoring the theoretical concepts in a concrete framework and exemplifying its learning capabilities through practical implementation, this thesis contributes to a comprehensive understanding and application of the principles of the theory.
+This thesis introduces a novel learning framework inspired by neuroscience to address the core issues inherent in deep learning systems. Inspired by the human brain's remarkable learning capabilities, which surpass deep learning's limitations, this research aims to integrate neuroscientific insights into an image-processing framework. It seeks to overcome existing limitations and bridge the gap between artificial and biological intelligence. The thesis draws significant inspiration from the ``Theory of Natural Intelligence'' proposed by \sideciteay{von_der_malsburg_theory_2022} \citeay{von_der_malsburg_theory_2022} \citeauthor*{von_der_malsburg_theory_2022} \citeauthor{von_der_malsburg_theory_2022} and provides a concrete manifestation of the theory within the framework. By anchoring the theoretical concepts in a concrete framework and exemplifying its learning capabilities through practical implementation, this thesis contributes to a comprehensive understanding and application of the principles of the theory.
 
-This thesis lies at the intersection of deep learning and neurocomputing\sidenote{Neurocomputing is a subfield of neuroscience that focuses on implementing biologically plausible learning algorithms.}. It adopts many learning paradigms from neurocomputing, leveraging the capabilities of biologically inspired algorithms. At the same time, the computational efficiency of deep learning algorithms is being exploited. By merging the strengths of both fields, this work aims to develop a hybrid approach that combines the biological plausibility of neurocomputing with the computational efficiency of deep learning to foster advances in learning algorithms.
+
+The motivation for this work arises from a comparative analysis of the properties of the biological visual system and deep networks. The following section highlights significant differences and, in particular, identifies shortcomings within neural networks. These identified deficiencies are addressed in \chref{probabilistic_framework} by proposing an alternative to current image processing networks.
+
+
+\section{Motivation}\seclbl{intro_motivation}
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.85\textwidth]{sdp_mountain_spirit.jpg}
+    \caption[Mountain Spirit in Winter by Sandro del Prete]{Mountain Spirit in Winter by \citeay{del_prete_mountain_1982} demonstrating that humans immediately can observe the overall pattern (a man's face) even though local features depict a painter drawing a house.}
+    \figlbl{sdp_mountain}
+\end{figure}
+
+One of the insights from the \emph{Gestalt} psychology \sidecite{ellis_source_1938, kohler_gestalt_1992, wagemans_century_2012, hamlyn_psychology_2017} is that humans are apparently able to recognise the Gestalt of an object within a very short time; The brain can immediately recognise global patterns - arrays of local features that consistently conform to a known large-scale pattern - even if those local features are buried in noise or would, on the basis of local context, be interpreted very differently. Thus, local decisions are made based on plausibility considering overall patterns, while the overall patterns can only be defined based on local features.
+
+For example, when looking at \figref{sdp_mountain}, local and global patterns are not aligned. A painter drawing a picture from a house in a snowy landscape can be observed when looking at local features. However, a man's face is visible when looking at the overarching pattern.
+This example illustrates that avoiding the ``fallacy of early commitment'' is important, as David Marr put it \sidecite{marr_vision_2010}.
+Otherwise, when focusing on local features only, systems could commit to objects like trees, a painter, an image, a house, and snow. Such systems would be unable to recognise the global pattern as a men's face typically comprises eyes, nose, etc. and not the aforementioned objects.
+
+The theory of natural intelligence \sidecite{von_der_malsburg_theory_2022} and work based on self-organising projection fibres (c.f. \secref{projection_fibres}) considers the principle of preventing early commitment as a core mechanism for the effectiveness of the human visual system.
+Preventing early commitment allows a system to leave multiple options open simultaneously: The system does not take decisions early in the learning process as typical deep learning models do but considers local and global features at the same time, continuously ruling out implausible hypotheses.
+
+The most used architectures for image processing are based on CNNs (c.f. \secref{cnns}). This type of network cannot prevent early commitment by design: The first layers extract local features from images, thereby having access to small patches only. The extracted low-level features are combined into higher-level features in later layers \sidecite{prince_understanding_2023}. Thus, the first layers do not consider global features but steer the decision process during training and inference toward specific directions based on local features. Therefore, CNNs take local decisions without consolidating global information\sidenote{CNNs can be trained to make diverse decisions in high-level layers when appropriate labels are given. However, these decisions are still based on already made local decisions, and such networks cannot deal with ambiguity since the decision process is not based on a two-way iteration.}.
+
+Transformer-based \sidecite{dosovitskiy_image_2021} or fully connected \sidecite{tolstikhin_mlp-mixer_2021} vision architectures, on the other hand, might not have this design limitation since early layers can access the entire input.
+However, they have a fallacy of early commitment in the sense that they process the input layer-wise. Typically, the input of a vision architecture is specific (e.g. an image) and mapped to more general information (e.g. a class label).
+However, general information is not used to confirm or validate specific information and therefore, high-level decisions can be misled by the wrong and inconsistent early decisions.
+Thus, the first layers make decisions on lower-level features and steer the decision process during training and inference towards a specific direction without considering higher-level features, thereby being prone to early commitment as well.
+
+To prevent early commitment, deep learning architectures should model the concept of uncertainty. It would be beneficial to introduce multiple hypotheses at each layer and restrict the layers to modelling their uncertainties rather than committing to a single hypothesis. Furthermore, the model needs to be able to re-evaluate previously taken decisions, i.e. update local decisions in the light of global decisions.
+
+Besides having the problem of early commitment, deep networks also lack dealing with ambiguity and object-independent transformation invariance (c.f. \secref{limitationsDL}).
+The inability to deal with ambiguity is related to deep learning networks not modelling uncertainty and usually providing a single prediction.
+Deep networks can learn to generate transformation-invariant features if they see enough samples during training.
+However, they lack the ability to transfer the concept of a transformation, such as rotation from one object to another.
+
+This thesis proposes a biologically inspired vision framework to mitigate these disadvantages. 
+The thesis lies at the intersection of deep learning and neurocomputing\sidenote{Neurocomputing is a subfield of neuroscience that focuses on implementing biologically plausible learning algorithms.}. It adopts many learning paradigms from neurocomputing, leveraging the capabilities of biologically inspired algorithms. At the same time, the computational efficiency of deep learning algorithms is being exploited. By merging the strengths of both fields, this work aims to develop a hybrid approach that combines the biological plausibility of neurocomputing with the computational efficiency of deep learning to foster advances in learning algorithms.
 
 
 \section{Contribution}
