--- a/tex/probabilistic_framework.tex
+++ b/tex/probabilistic_framework.tex
@@ -1,39 +1,12 @@
-\begin{figure}[h]
-    \centering
-    \includegraphics[width=0.85\textwidth]{sdp_mountain_spirit.jpg}
-    \caption[Mountain Spirit in Winter by Sandro del Prete]{Mountain Spirit in Winter by \citeay{del_prete_mountain_1982} demonstrating that humans immediately can observe the overall pattern (a man's face) even though local features depict a painter drawing a house.}
-    \figlbl{sdp_mountain}
-\end{figure}
+As described in \secref{intro_motivation}, deep networks suffer from early commitment.
+However, the \emph{Gestalt} psychology \sidecite{ellis_source_1938, kohler_gestalt_1992, wagemans_century_2012, hamlyn_psychology_2017}, as well as the theory of natural intelligence \sidecite{von_der_malsburg_theory_2022} and work based on self-organising projection fibres (c.f. \secref{projection_fibres}) considers the principle of preventing early commitment as a core mechanism for the effectiveness of the human visual system.
 
-One of the insights from the \emph{Gestalt} psychology \sidecite{ellis_source_1938, kohler_gestalt_1992, wagemans_century_2012, hamlyn_psychology_2017} is that humans are apparently able to recognise the Gestalt of an object within a very short time; The brain can immediately recognise global patterns - arrays of local features that consistently conform to a known large-scale pattern - even if those local features are buried in noise or would, on the basis of local context, be interpreted very differently. Thus, local decisions are made based on plausibility considering overall patterns, while the overall patterns can only be defined based on local features.
-
-For example, when looking at \figref{sdp_mountain}, local and global patterns are not aligned. A painter drawing a picture from a house in a snowy landscape can be observed when looking at local features. However, a man's face is visible when looking at the overarching pattern.
-This example illustrates that avoiding the ``fallacy of early commitment'' is important, as David Marr put it \sidecite{marr_vision_2010}.
-Otherwise, when focusing on local features only, systems could commit to objects like trees, a painter, an image, a house, and snow. Such systems would be unable to recognise the global pattern as a men's face typically comprises eyes, nose, etc. and not the aforementioned objects.
-
-The theory of natural intelligence \sidecite{von_der_malsburg_theory_2022} and work based on self-organising projection fibres (c.f. \secref{projection_fibres}) considers the principle of preventing early commitment as a core mechanism for the effectiveness of the human visual system.
-Preventing early commitment allows a system to leave multiple options open simultaneously: The system does not take decisions early in the learning process as typical deep learning models do but rather iterates between local and global features, continuously ruling out implausible hypotheses.
-
-The most used architectures for image processing are based on CNNs (c.f. \secref{cnns}). This type of network cannot prevent early commitment by design: The first layers extract local features from images, thereby having access to small patches only. The extracted low-level features are combined into higher-level features in later layers \sidecite{prince_understanding_2023}. Thus, the first layers do not consider global features but steer the decision process during training and inference toward specific directions based on local features. Therefore, CNNs take local decisions without consolidating global information\sidenote{CNNs can be trained to make diverse decisions in high-level layers when appropriate labels are given. However, these decisions are still based on already made local decisions, and such networks cannot deal with ambiguity since the decision process is not based on a two-way iteration.}.
-
-Transformer-based \sidecite{dosovitskiy_image_2021} or fully connected \sidecite{tolstikhin_mlp-mixer_2021} vision architectures, on the other hand, might not have this design limitation since early layers can access the entire input.
-However, they have a fallacy of early commitment in the sense that they process the input layer-wise. Typically, the input of a vision architecture is specific (e.g. an image) and mapped to more general information (e.g. a class label).
-However, general information is not used to confirm or validate specific information and therefore, high-level decisions can be misled by the wrong and inconsistent early decisions.
-Thus, the first layers make decisions on lower-level features and steer the decision process during training and inference towards a specific direction without considering higher-level features, thereby being prone to early commitment as well.
-
-To prevent early commitment, deep learning architectures should model the concept of uncertainty. It would be beneficial to introduce multiple hypotheses at each layer and restrict the layers to modelling their uncertainties rather than committing to a single hypothesis. Furthermore, the model needs to be able to re-evaluate previously taken decisions, i.e. update local decisions in the light of global decisions.
-
-Besides having the problem of early commitment, deep networks also lack dealing with ambiguity and object-independent transformation invariance (c.f. \secref{limitationsDL}).
-The inability to deal with ambiguity is related to deep learning networks not modelling uncertainty and usually providing a single prediction.
-Deep networks can learn to generate transformation-invariant features if they see enough samples during training.
-However, they lack the ability to transfer the concept of a transformation, such as rotation from one object to another.
-
-To mitigate these disadvantages, a biologically inspired vision framework is proposed. 
-The framework is on the verge between the two fields of neuroscience and deep learning.
-Both fields use similar vocabulary but sometimes refer to different principles. 
-Therefore, some general principles from neuroscience and a unified vocabulary are introduced first.
-The subsequent sections provide an overview of the framework, highlight its advantages and explain the inspiration for its design. Next, the components of the framework are explained in more detail.
-
+A system that avoids early commitment makes local decisions considering overall patterns, while local features define the overall patterns.
+A framework implementing these principles is proposed in the following.
+The inspiration stems from the human brain, and numerous insights from neuroscience are incorporated into the framework.
+Therefore, the \secref{framework_neuroscience} introduces findings from neuroscience that served as inspiration.
+Furthermore, it introduces a unified vocabulary that is compatible with both fields, neuroscience and deep learning.
+The subsequent sections provide an overview of the framework, highlight its advantages and explain the inspiration for its design. Finally, the framework's components are explained in more detail and concrete implementations are proposed.
 
 
 \section{Neuroscientific Inspiration}\seclbl{framework_neuroscience}
